feat: store binome information
